# dsp-tangoh-app

./: .bazelrc  .gitignore  .scalafix  .scalafmt.conf  404.html  BUILD.bazel  CHANGELOG.md  LICENSE  Makefile  README.md  WORKSPACE  build.sbt  cypress.config.js  cypress.json  deps.bzl  index.html  package-lock.json  package.json  tsconfig.json
.bsp/: sbt.json
.github/workflows/: main.yml
01-introduction/: index.html
01-introduction/data-formats/: index.html
01-introduction/example-project/: index.html
01-introduction/standoff-rdf/: index.html
01-introduction/what-is-knora/: index.html
app/: BUILD.bazel
app/public/: default.css  index.html
app/public/js/: 00_init_javascript.js  02_searchlist.js  03_showval.js  datehelpers.js  imagebase.js  infowin.js  innerdim.js  jquery.avplayer.js  jquery.avtranscript.js  jquery.center.js  jquery.chartable.js  jquery.clipurl.js  jquery.colorpicker.js  jquery.dateobj.js  jquery.dialog.js  jquery.dialogbox.js  jquery.dragndrop.js  jquery.editvalue.js  jquery.elestack.js  jquery.extsearch.js  jquery.flipbook.js  jquery.geonameobj.js  jquery.geonames.js  jquery.graph.js  jquery.hlist.js  jquery.htmleditor.js  jquery.iconclass.js  jquery.imageslider.js  jquery.imagezoom.js  jquery.location.js  jquery.modaliframe.js  jquery.numberrange.js  jquery.pgbar.js  jquery.propedit.js  jquery.regions.js  jquery.resadd.js  jquery.searchbox.js  jquery.searchext.js  jquery.selection.js  jquery.selradio.js  (+16 more)
app/public/lang/: de.json  en.json  fr.json  it.json
app/public/less/: dock.less  jquery-ui.css  workwin.less
app/public/less/project_default/: _workwin.less
app/public/test/: Gruntfile.js  jquery.clipurl.spec.html  package-lock.json  package.json
app/public/test/specs/: jquery.clipurl.spec.html
app/src/main/resources/: application.conf
app/src/main/scala/org/knora/salsah/: Main.scala  Settings.scala
app/src/test/scala/org/knora/salsah/: BUILD.bazel
cypress/: BUILD.bazel  cypress.json
cypress/integration/: BUILD.bazel  login.spec.ts  page.spec.ts  project-selection.spec.ts  resource-creation.spec.ts  simple-search.spec.ts
cypress/support/: BUILD.bazel  commands.ts  index.ts  plugin.ts
docker/: BUILD.bazel  test_app_image_config.yaml
docs/: .gitignore  Makefile  mkdocs.yml  requirements.txt
docs/src/: index.md
e2e/: BUILD.bazel  cypress.json  hello.spec.ts  package-lock.json  package.json  plugin.ts  search.ts  tsconfig.json  world.spec.js
e2e/cypress/integration/: active-project.spec.ts  limit-simplesearch-projects.spec.ts  login.spec.ts  project-selection.spec.ts  search.spec.ts  simple-search.spec.ts
e2e/cypress/support/: commands.ts
e2e/integration/: BUILD.bazel  hello.spec.ts  login.spec.ts  page.spec.ts  project-selection.spec.ts  resource-creation.spec.ts  resource-editing.spec.ts  simple-search.spec.ts  world.spec.js
e2e/support/: BUILD.bazel  index.ts
project/: Dependencies.scala  plugins.sbt
search/: search_index.json
