load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

package(default_visibility = ["//visibility:public"])

# builds the docker image
container_image(
    name = "docker",
    base = "@openjdk11//image",
    cmd = [
        "java",
        "-jar",
        "/app/app_deploy.jar",
    ],
    directory = "app",
    docker_run_flags = "--rm -p 3335:3335",
    env = {
        "LANG": "en_US.UTF-8",
        "JAVA_OPTS": "-Dsun.jnu.encoding=UTF-8 -Dfile.encoding=UTF-8 -Dconfig.file=salsah.conf",
    },
    files = [
        "//app:app_deploy.jar",
    ],
    labels = {
        "MAINTAINER": "400790+subotic@users.noreply.github.com",
    },
    legacy_run_behavior = False,
    ports = [
        "3335/tcp",
    ],
    tars = [
        "//app:public_folder_tar",
    ],
)

# push to dockerhub
container_push(
    name = "push",
    format = "Docker",
    image = ":docker",
    registry = "index.docker.io",
    repository = "daschswiss/dsp-tangoh-app",
    tag = "{BUILD_SCM_TAG}",
)

# use in targets needing an up-to-date docker image locally
#genrule(
#  name = "build",
#  srcs = [":image"],
#  cmd = "docker load -i $(location //docker/knora-salsah1:image) >$@",
#  outs = ["build-output.txt"]
#)
