package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@cypress//:index.bzl", "cypress_web_test")

ts_library(
    name = "page_spec",
    testonly = True,
    srcs = [
        "page.spec.ts",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
    data = [
        "@npm//cypress",
    ]
)

ts_library(
    name = "login_spec",
    testonly = True,
    srcs = [
        "login.spec.ts",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
    data = [
        "@npm//cypress",
    ]
)

ts_library(
    name = "project_selection_spec",
    testonly = True,
    srcs = [
        "project-selection.spec.ts",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
    data = [
        "@npm//cypress",
    ]
)

ts_library(
    name = "resource_creation_spec",
    testonly = True,
    srcs = [
        "resource-creation.spec.ts",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
    data = [
        "@npm//cypress",
    ]
)

ts_library(
    name = "resource_editing_spec",
    testonly = True,
    srcs = [
        "resource-editing.spec.ts",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
    data = [
        "@npm//cypress",
    ]
)


ts_library(
    name = "simple_search_spec",
    testonly = True,
    srcs = [
        "simple-search.spec.ts",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
    data = [
        "@npm//cypress",
    ]
)

cypress_web_test(
    # The name of your test target
    name = "integration",
    srcs = [
        ":page_spec",
        ":login_spec",
        ":resource_creation_spec",
        ":resource_editing_spec",
        ":project_selection_spec",
        "simple_search_spec"
    ],
    # A cypress config file is required
    config_file = "//cypress:cypress.json",
    # Any runtime dependencies you need to boot your server or run your tests
    data = [
        "@npm//rxjs",
        "@npm//express",
        "//app:public_folder",
    ],
    # Your cypress plugin used to configure cypress and boot your server
    plugins_file = "//cypress/support:plugin",
)
