package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@cypress//:index.bzl", "cypress_web_test")

ts_library(
    name = "page_spec",
    testonly = True,
    srcs = [
        "page.spec.ts",
    ],
    data = [
        "@npm//cypress",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
)

ts_library(
    name = "login_spec",
    testonly = True,
    srcs = [
        "login.spec.ts",
    ],
    data = [
        "@npm//cypress",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
)

ts_library(
    name = "project_selection_spec",
    testonly = True,
    srcs = [
        "project-selection.spec.ts",
    ],
    data = [
        "@npm//cypress",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
)

ts_library(
    name = "resource_creation_spec",
    testonly = True,
    srcs = [
        "resource-creation.spec.ts",
    ],
    data = [
        "@npm//cypress",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
)

ts_library(
    name = "resource_editing_spec",
    testonly = True,
    srcs = [
        "resource-editing.spec.ts",
    ],
    data = [
        "@npm//cypress",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
)

ts_library(
    name = "simple_search_spec",
    testonly = True,
    srcs = [
        "simple-search.spec.ts",
    ],
    data = [
        "@npm//cypress",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//cypress",
    ],
)

cypress_web_test(
    # The name of your test target
    name = "integration",
    srcs = [
        "simple_search_spec",
        "world.spec.js",
        ":login_spec",
        ":page_spec",
        ":project_selection_spec",
        ":resource_creation_spec",
        ":resource_editing_spec",
    ],
    # A cypress config file is required
    config_file = "//e2e:cypress.json",
    # Any runtime dependencies you need to boot your server or run your tests
    data = [
        "//app:public_folder",
        "@npm//express",
        "@npm//rxjs",
    ],
    # Your cypress plugin used to configure cypress and boot your server
    plugins_file = "//e2e/support:index",
)
